test/files/parser/errors/assign-constant.organic
// Assign to language constant
// 4 ~ 1 ~ Expected variable name, received "sequence-forward".

sequence-forward = 0
